# pyremark_slides

./: .gitignore  LICENSE  MANIFEST.in  README.md  carlae.conf  pyproject.toml  setup.py
docs/: index.html
docs/testing/: demo_1-Catppuccin_mocha.slides.html  demo_2-RosePine-dawn.slides.html  demo_6-Everforest-day.slides.html
pyremark/: pyremark.py
pyremark/remarkjs/: Catppuccin.css  Everforest-night.css  Lavender-Cat.css  Nord-polar.css  Rosepine-dawn.css  Rosepine-moon.css  Skeleton.css  applestyle.css  base.css  colors_config.css  custom.css  searchMod.js  sidebar.css  sidebar.js
pyremark/templates/: base.html  list.html
testing/: custom3.css  demo_0-Catppuccin_latte.md  demo_0-Catppuccin_latte.slides.html  demo_1-Catppuccin_mocha.md  demo_2-RosePine-dawn.md  demo_3-RosePine-moon.md  demo_3-RosePine-moon.slides.html  demo_4-Nord-polar.md  demo_4-Nord-polar.slides.html  demo_5-Nord-storm.md  demo_5-Nord-storm.slides.html  demo_6-Everforest-day.md  demo_7-Everforest-night.md  demo_7-Everforest-night.slides.html  gen_pdf.sh  index.html  test.md  test.slides.html  testting_note (another copy).slides.html  testting_note (testkatex).slides.html  testting_note.md  testting_note.slides.html  testting_note2.md  testting_note2.slides.html  testting_note_searchbar.md  testting_note_searchbar.slides.html  to_generate_pdf.md
testing/remarkjs/: Nord-polar-serif.css  Nord-polar-zh.css  Nord-storm-serif.css  Nord-storm-zh.css  Rosepine-dawn.css  SanFrancisco.css  Skeleton.css  base.css  everforest_colors.css  nord_colors.css  sidebar.js  (+4 more)
theme_demo/: generate_thumbnails.sh
(+11 files in other folders)
